# projet_appr_auto

./: .gitignore  .justfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
airbnb_prices/: __init__.py  __main__.py
airbnb_prices/config/: __init__.py  experiment_config.py  feature_engineering_config.py  preprocessing_config.py  utils.py
airbnb_prices/data/: __init__.py  data_pipeline.py  dataset.py  download.py  feature_engineering.py  fillna.py  preprocessing.py
airbnb_prices/data/dataset/: __init__.py
airbnb_prices/eval/: train_eval.py
airbnb_prices/models/: models.py
examples/: config.json  data loading.ipynb  new_config.json  sample.csv  training.ipynb
examples/dataset/: config.json  example.py
