[tool.poetry]
name = "airbnb_prices"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_prices"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 104

[tool.isort]
profile = "black"
line_length = 104

[tool.pylint.GENERAL]
jobs = 0
disable = """
    too-few-public-methods,
    duplicate-code,
    logging-fstring-interpolation,
    too-many-instance-attributes,
    missing-module-docstring,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    too-many-arguments,
    inconsistent-return-statements,
    too-many-ancestors,
    too-many-locals,
    unspecified-encoding,
    fixme,
    unnecessary-pass
    """

[tool.pylint.FORMAT]
max-line-length=104

[tool.pylint.BASIC]
good-names="i,j,df,X,Y,x,y"

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members="numpy.*, torch.*"
