[tool.poetry]
name = "airbnb_prices"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_prices"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pydantic = "^1.10.2"
click = "^8.1.3"
scikit-learn = "^1.1.2"
xgboost = "^1.6.2"
ipympl = "^0.9.2"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.4"
pylint-pydantic = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 104

[tool.isort]
profile = "black"
line_length = 104

[tool.pylint.GENERAL]
jobs = 0
disable = """
    too-few-public-methods,
    duplicate-code,
    logging-fstring-interpolation,
    too-many-instance-attributes,
    missing-module-docstring,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    too-many-arguments,
    inconsistent-return-statements,
    too-many-ancestors,
    too-many-locals,
    unspecified-encoding,
    fixme,
    unnecessary-pass
    """
extension-pkg-whitelist="pydantic"
load-plugins = "pylint_pydantic"


[tool.pylint.FORMAT]
max-line-length=104

[tool.pylint.BASIC]
good-names="i,j,df,X,Y,x,y,X_train,X_val,X_test"

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members="numpy.*, torch.*"
